--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@mediapipe/face_mesh": "^0.1.1617147239",
+    "@tensorflow-models/face-landmarks-detection": "0.0.3",
+    "@tensorflow-models/facemesh": "0.0.5",
+    "@tensorflow/tfjs-backend-cpu": "^3.3.0",
+    "@tensorflow/tfjs-backend-wasm": "^3.3.0",
+    "@tensorflow/tfjs-backend-webgl": "^2.6.0",
+    "@tensorflow/tfjs-converter": "^2.6.0",
+    "@tensorflow/tfjs-core": "^2.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -27,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slidedown": "^2.4.5",
+    "react-stats": "0.0.5",
     "react-table": "^7.6.3",
     "react-thunk": "^1.0.0",
     "react-tooltip": "^4.2.13",
@@ -37,6 +46,7 @@
     "riek": "^1.1.0",
     "rxjs": "^6.6.3",
     "socket.io-client": "^3.1.0",
+    "stats.js": "^0.17.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.2",
