--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "material-table": "^1.69.2",
+    "plotly.js": "^1.58.4",
+    "plotly.js-dist": "^1.58.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-media-recorder": "^1.4.0",
     "react-minimal-pie-chart": "^8.1.0",
     "react-plaid-link": "^3.0.0",
+    "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
