--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wealth-env-poc-server",
+  "name": "image-processing-server",
   "version": "1.0.0",
   "description": "Server side for the webrtc demo",
   "main": "server.js",
